--- a/scrap/src/main/res/layout/activity_main.xml
+++ b/scrap/src/main/res/layout/activity_main.xml
@@ -1,16 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:id="@+id/main_container">
 
-    <TextView
-        android:id="@+id/main_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
 
-    <ImageView
-        android:id="@+id/main_image"
-        android:layout_width="32dp"
-        android:layout_height="32dp" />
-</LinearLayout>
+</FrameLayout>
