--- a/scrap/src/main/res/menu/image_pager.xml
+++ b/scrap/src/main/res/menu/image_pager.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.hawa.scrap.ImagePagerActivity" >
+    tools:context="com.hawa.scrap.ui.MainActivity" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
